# advent_of_code

./: .gitignore  Cargo.toml  README.md
.cargo/: config
y_2015/: Cargo.toml  README.md
y_2015/benches/: benchmarks.rs
y_2015/src/: lib.rs  main.rs
y_2016/: Cargo.toml
y_2016/.cargo/: config
y_2022/: Cargo.toml
y_2022/benches/: benchmarks.rs
