[package]
name = "y_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
regex = "1.7.0"
crypto = "0.4.0"
fancy-regex = "0.10.0"
aoc_core = { path = "../aoc_core" }

[profile.dev]
debug = true
